@@ -3,11 +3,13 @@ CONTRIBUTING.pod
 lib/GDPR/IAB/TCFv2.pm
 lib/GDPR/IAB/TCFv2/BitField.pm
 lib/GDPR/IAB/TCFv2/BitUtils.pm
+lib/GDPR/IAB/TCFv2/Constants/Purpose.pm
+lib/GDPR/IAB/TCFv2/Constants/SpecialFeature.pm
 lib/GDPR/IAB/TCFv2/RangeConsent.pm
 lib/GDPR/IAB/TCFv2/RangeSection.pm
 LICENSE
 Makefile.PL
 MANIFEST			This list of files
-README.md
+README.pod
 t/00-load.t
 t/01-parse.t
