@@ -1,13 +1,15 @@
 package GDPR::IAB::TCFv2::Constants::SpecialFeature;
 use strict;
 use warnings;
+use Scalar::Util qw<dualvar>;
 
 require Exporter;
 use base qw<Exporter>;
 
 use constant {
-    Geolocation => 1,
-    DeviceScan  => 2,
+    Geolocation => dualvar( 1, "Use precise geolocation data" ),
+    DeviceScan  =>
+      dualvar( 2, "Actively scan device characteristics for identification" )
 };
 
 our @EXPORT_OK = qw<
@@ -34,11 +36,15 @@ GDPR::IAB::TCFv2::Constants::SpecialFeature - TCF v2.2 special features
 
     use feature 'say';
     
-    say "Geolocation id is ". Geolocation;
+    say "Special feature id is ". (0+Geolocation), ", and it means " . Geolocation;
     # Output:
-    # Geolocation id is 1
+    # Special feature id is 1, and it means Use precise geolocation data
 
 =head1 CONSTANTS
+
+All constants are C<dualvar> (see L<Scalar::Util>).
+
+Returns a scalar that has the C<id> in a numeric context and the C<description> in a string context.
 
 =head2  Geolocation
 
